log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log-output
          persistentVolumeClaim:
            claimName: log-output-claim
      containers:
        - name: log-writer
          image: ipegii/dwk-log-writer:2.1
          imagePullPolicy: Always
          volumeMounts: # Mount volume
          - name: shared-log-output
            mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
        - name: log-responder
          image: ipegii/dwk-log-responder:2.1.3
          imagePullPolicy: Always
          volumeMounts: # Mount volume
          - name: shared-log-output
            mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
